add patch and delete `/me` endpoints
